# SC-Factory

./: .gitignore  Cargo.toml  LICENSE  README.md
philanthrify-charity-dao/: Cargo.toml
philanthrify-charity-dao/meta/: Cargo.toml
philanthrify-charity-dao/meta/src/: main.rs
philanthrify-charity-dao/src/: lib.rs
philanthrify-charity/src/: lib.rs
philanthrify-factory/src/: lib.rs
philanthrify-philsoul/: Cargo.toml
philanthrify-philsoul/meta/: Cargo.toml
philanthrify-philsoul/meta/src/: main.rs
philanthrify-philsoul/src/: lib.rs
philanthrify-platform-dao/: Cargo.toml
philanthrify-platform-dao/meta/: Cargo.toml
philanthrify-platform-dao/meta/src/: main.rs
philanthrify-platform-dao/src/: lib.rs
philanthrify-project-donor-dao/: Cargo.toml
philanthrify-project-donor-dao/meta/: Cargo.toml
philanthrify-project-donor-dao/meta/src/: main.rs
philanthrify-project-donor-dao/src/: lib.rs
philanthrify-project/src/: lib.rs
