[workspace]
resolver = "2"

members = [
  "philanthrify-factory",
  "philanthrify-factory/meta",
  "philanthrify-charity",
  "philanthrify-charity/meta",
  "philanthrify-charity-dao",
  "philanthrify-charity-dao/meta",
  "philanthrify-platform-dao",
  "philanthrify-platform-dao/meta",
  "philanthrify-philsoul",
  "philanthrify-philsoul/meta",
  "philanthrify-project-donor-dao",
  "philanthrify-project-donor-dao/meta",
  "philanthrify-project",
  "philanthrify-project/meta",
]
